2014-04-21  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.2.0-rc3 Released.

	* chan_sip: Add sendrpid trust options

	  In r411189, some behavior was changed which made sendrpid behavior
	  act in a more trusting manner by sending full user data for peers
	  set with private caller presence in P-Asserted-Identity headers.
	  Since this changed long time expected behaviors, we decided to pull
	  that patch when that was pointed out by the community. Instead, this
	  patch provides a trust_id_outbound setting which will expose the data
	  per RFC-3325 if set to 'yes' and simply not send the PAI/RPID headers
	  at all if set to 'no'. By default trust_id_outbound will be set to
	  'legacy' which will preserve the behavior prior to these patches.
	  Extra special thanks to Walter Doekes for providing advice and
	  feedback.

	* main/asterisk: Fix startup sequence for realtime features

	  When ASTERISK-23265/ASTERISK-23320 was fixed, it inadvertently led to
	  realtime features breaking. This was due to features loading prior to
	  realtime. This patch fixes this by loading features after loading
	  dynamic modules.

2014-04-14  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 12.2.0-rc2 Released.

	* autoservice: fix reference leak of logger callid.

	  autoservice acquires a local reference to the logger callid of each
	  channel in a loop. This local reference was not released, causing the
	  callid of every channel in autoservice to leak. This change moves the
	  callid unref inside the loop.

	  ASTERISK-23616 #close
	  Reported by: ibercom

	* res_hep_pjsip: Use the channel name instead of the call ID when it is
	  available

	  During discussions with Alexandr Dubovikov at Kamailio World, it
	  became apparent that while the SIP call ID is a useful identifier
	  prior to an Asterisk channel being created, it is far more preferable
	  to use the channel name (or some channel based identifier) when the