@@ -1,1 +1,1 @@
-12.2.0-rc3
+12.2.0
